<?xml version="1.0" encoding="utf-8"?><!--
  This file is part of My Expenses.
  My Expenses is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  My Expenses is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with My Expenses.  If not, see <http://www.gnu.org/licenses/>.
 -->
<resources>
    <item name="BACKUP_COMMAND" type="id" />
    <item name="CONTRIB_INFO_COMMAND" type="id" />
    <item name="CONTRIB_INFO_DIALOG" type="id" />
    <item name="CONTRIB_BUY_COMMAND" type="id" />
    <item name="CREATE_COMMAND" type="id" />
    <item name="CREATE_PART_COMMAND" type="id" />
    <item name="CREATE_SUB_COMMAND" type="id" />
    <item name="CREATE_ACCOUNT_COMMAND" type="id" />
    <item name="CREATE_ACCOUNT_FOR_TRANSFER_COMMAND" type="id" />
    <item name="CREATE_TEMPLATE_COMMAND" type="id" />
    <item name="DELETE_COMMAND" type="id" />
    <item name="DELETE_COMMAND_DO" type="id" />
    <item name="DISTRIBUTION_COMMAND" type="id" />
    <item name="EDIT_PLAN_INSTANCE_COMMAND" type="id" />
    <item name="EDIT_COMMAND" type="id" />
    <item name="FEEDBACK_COMMAND" type="id" />
    <item name="GROUPING_COMMAND" type="id" />
    <item name="HANDLE_RESTORE_ON_INSTALL_COMMAND" type="id" />
    <item name="HELP_COMMAND" type="id" />
    <item name="INVERT_COMMAND" type="id" />
    <item name="MANAGE_TEMPLATES_COMMAND" type="id" />
    <item name="MORE_ACTIONS_DIALOG" type="id" />
    <item name="MORE_INFO_DIALOG" type="id" />
    <item name="NO_COMMAND" type="id" />
    <item name="PASSWORD_WARNING_DIALOG" type="id" />
    <item name="RATE_COMMAND" type="id" />
    <item name="RESET_COMMAND" type="id" />
    <item name="RESTORE_COMMAND" type="id" />
    <item name="SAVE_AND_NEW_COMMAND" type="id" />
    <item name="SELECT_ACCOUNT_DIALOG" type="id" />
    <item name="SETTINGS_COMMAND" type="id" />
    <item name="TEMPLATE_TITLE_DIALOG" type="id" />
    <item name="WEB_COMMAND" type="id" />
    <item name="ROADMAP_RESULT_COMMAND" type="id" />
    <item name="ROADMAP_CLEAR_COMMAND" type="id" />
    <item name="ROADMAP_CLEAR_COMMAND_DO" type="id" />
    <item name="CREATE_INSTANCE_EDIT_COMMAND" type="id" />
    <item name="CREATE_INSTANCE_SAVE_COMMAND" type="id" />
    <item name="CREATE_PLAN_INSTANCE_EDIT_COMMAND" type="id" />
    <item name="CREATE_PLAN_INSTANCE_SAVE_COMMAND" type="id" />
    <item name="CANCEL_PLAN_INSTANCE_COMMAND" type="id" />
    <item name="RESET_PLAN_INSTANCE_COMMAND" type="id" />
    <item name="DELETE_PLAN_INSTANCE_COMMAND" type="id" />
    <item name="DELETE_ACCOUNT_COMMAND_DO" type="id" />
    <item name="SELECT_COMMAND" type="id" />
    <item name="SHARE_COMMAND" type="id" />
    <item name="CANCEL_CALLBACK_COMMAND" type="id" />
    <item name="SETUP_CATEGORIES_DEFAULT_COMMAND" type="id" />
    <item name="UP_COMMAND" type="id" />
    <item name="START_EXPORT_COMMAND" type="id" />
    <item name="PLANNER_SETUP_INFO_CREATE_NEW_WARNING_DIALOG" type="id" />
    <item name="SHOW_STATUS_HANDLE_COMMAND" type="id" />
    <item name="BALANCE_COMMAND" type="id" />
    <item name="BALANCE_COMMAND_DO" type="id" />
    <item name="FILTER_CATEGORY_COMMAND" type="id" />
    <item name="FILTER_AMOUNT_COMMAND" type="id" />
    <item name="FILTER_COMMENT_COMMAND" type="id" />
    <item name="FILTER_STATUS_COMMAND" type="id" />
    <item name="FILTER_PAYEE_COMMAND" type="id" />
    <item name="FILTER_METHOD_COMMAND" type="id" />
    <item name="FILTER_DATE_COMMAND" type="id" />
    <item name="FILTER_TAG_COMMAND" type="id" />
    <item name="PRINT_COMMAND" type="id" />
    <item name="OPEN_PDF_COMMAND" type="id" />
    <item name="AUTO_FILL_COMMAND" type="id" />
    <item name="EXCLUDE_FROM_TOTALS_COMMAND" type="id" />
    <item name="QUIT_COMMAND" type="id" />
    <item name="SPLIT_TRANSACTION_COMMAND" type="id" />
    <item name="TOGGLE_CHART_COMMAND" type="id" />
    <item name="VIEW_COMMAND" type="id" />
    <item name="CHANGE_COMMAND" type="id" />
    <item name="SAVE_COMMAND" type="id" />
    <item name="SEARCH_COMMAND" type="id" />
    <item name="SELECT_COMMAND_MULTIPLE" type="id" />
    <item name="UNDELETE_COMMAND" type="id" />
    <item name="EXPORT_CATEGORIES_COMMAND_UTF8" type="id" />
    <item name="EXPORT_CATEGORIES_COMMAND_ISO88591" type="id" />
    <item name="IMPORT_COMMAND" type="id" />
    <item name="PARSE_COMMAND" type="id" />
    <item name="SET_HEADER_COMMAND" type="id" />
    <item name="MOVE_COMMAND" type="id" />
    <item name="SORT_COMMAND" type="id" />
    <item name="SORT_TITLE_COMMAND" type="id" />
    <item name="SORT_LABEL_COMMAND" type="id" />
    <item name="SORT_USAGES_COMMAND" type="id" />
    <item name="SORT_LAST_USED_COMMAND" type="id" />
    <item name="SORT_AMOUNT_COMMAND" type="id" />
    <item name="SORT_ACCOUNT_COMMAND" type="id" />
    <item name="SORT_CUSTOM_COMMAND" type="id" />
    <item name="GROUPING_NONE_COMMAND" type="id" />
    <item name="GROUPING_DAY_COMMAND" type="id" />
    <item name="GROUPING_WEEK_COMMAND" type="id" />
    <item name="GROUPING_MONTH_COMMAND" type="id" />
    <item name="GROUPING_YEAR_COMMAND" type="id" />
    <item name="HELP_COMMAND_DRAWER" type="id" />
    <item name="FILTER_TRANSFER_COMMAND" type="id" />
    <item name="FILTER_ACCOUNT_COMMAND" type="id" />
    <item name="SORT_NEXT_INSTANCE_COMMAND" type="id" />
    <item name="SYNC_COMMAND" type="id" />
    <item name="FINTS_SYNC_COMMAND" type="id" />
    <item name="SYNC_SETTINGS_COMMAND" type="id" />
    <item name="SYNC_DOWNLOAD_COMMAND" type="id" />
    <item name="SYNC_LINK_COMMAND" type="id" />
    <item name="SYNC_UNLINK_COMMAND" type="id" />
    <item name="SYNC_LINK_COMMAND_REMOTE_DO" type="id" />
    <item name="SYNC_LINK_COMMAND_LOCAL_DO" type="id" />
    <item name="SYNC_LINK_COMMAND_REMOTE" type="id" />
    <item name="SYNC_LINK_COMMAND_LOCAL" type="id" />
    <item name="SYNCED_TO_OTHER_COMMAND" type="id" />
    <item name="SYNC_REMOVE_BACKEND_COMMAND" type="id" />
    <item name="SYNC_BACKEND_LOCAL" type="id" />
    <item name="SYNC_BACKEND_WEBDAV" type="id" />
    <item name="SYNC_BACKEND_DRIVE" type="id" />
    <item name="SYNC_BACKEND_DROPBOX" type="id" />
    <item name="SYNC_BACKEND_ONEDRIVE" type="id" />
    <item name="REMOVE_LICENCE_COMMAND" type="id" />
    <item name="SORT_MENU" type="id" />
    <item name="SORT_BY_DATE_ASCENDING_COMMAND" type="id" />
    <item name="SORT_BY_DATE_DESCENDING_COMMAND" type="id" />
    <item name="SORT_BY_AMOUNT_ASCENDING_COMMAND" type="id" />
    <item name="SORT_BY_AMOUNT_DESCENDING_COMMAND" type="id" />
    <item name="ROADMAP_DETAILS_COMMAND" type="id" />
    <item name="ROADMAP_ISSUE_VOTE_COMMAND" type="id" />
    <item name="ROADMAP_SUBMIT_VOTE" type="id" />
    <item name="SHARE_PDF_COMMAND" type="id" />
    <item name="HISTORY_COMMAND" type="id" />
    <item name="TOGGLE_BALANCE_COMMAND" type="id" />
    <item name="TOGGLE_INCLUDE_TRANSFERS_COMMAND" type="id" />
    <item name="TOGGLE_TOTALS_COMMAND" type="id" />
    <item name="ORIGINAL_AMOUNT_COMMAND" type="id" />
    <item name="ExchangeRateEdit1" type="id" />
    <item name="ExchangeRateEdit2" type="id" />
    <item name="UNGROUP_SPLIT_COMMAND" type="id" />
    <item name="GDPR_NO_CONSENT_COMMAND" type="id" />
    <item name="GDPR_CONSENT_COMMAND" type="id" />
    <item name="COLOR_COMMAND" type="id" />
    <item name="BUDGET_COMMAND" type="id" />
    <item name="MANAGE_CATEGORIES_COMMAND" type="id" />
    <item name="BACK_COMMAND" type="id" />
    <item name="FORWARD_COMMAND" type="id" />
    <item name="ROADMAP_COMMAND" type="id" />
    <item name="ACCOUNT_FLAGS_COMMAND" type="id" />
    <item name="BUDGET_ALLOCATED_ONLY" type="id" />
    <item name="REMAP_CATEGORY_COMMAND" type="id" />
    <item name="REMAP_PAYEE_COMMAND" type="id" />
    <item name="REMAP_METHOD_COMMAND" type="id" />
    <item name="REMAP_ACCOUNT_COMMAND" type="id" />
    <item name="REMAP_DATE_COMMAND" type="id" />
    <item name="REMAP_COMMAND" type="id" />
    <item name="MAP_TAG_COMMAND" type="id" />
    <item name="PLANNER_COMMAND" type="id" />
    <item name="SCAN_MODE_COMMAND" type="id" />
    <item name="OCR_DOWNLOAD_COMMAND" type="id" />
    <item name="FAQ_COMMAND" type="id" />
    <item name="LOAD_TEMPLATE_DO" type="id" />
    <item name="DEFAULT_ACTION_SAVE_COMMAND" type="id" />
    <item name="DEFAULT_ACTION_EDIT_COMMAND" type="id" />
    <item name="TESSERACT_DOWNLOAD_COMMAND" type="id" />
    <item name="COPY_TO_CLIPBOARD_COMMAND" type="id" />
    <item name="NEW_BALANCE_COMMAND" type="id" />
    <item name="theme" type="id">@id/themeSwitch</item>
    <item name="DEFAULT_ACTION_MENU" type="id" />
    <item name="CLOSE_COMMAND" type="id" />
    <item name="LINK_TRANSFER_COMMAND" type="id" />
    <item name="MERGE_COMMAND" type="id" />
    <item name="SHOW_PASSWORD_COMMAND" type="id" />
    <item name="DEBT_COMMAND" type="id" />
    <item name="MANAGE_PARTIES_COMMAND" type="id" />
    <item name="DELETE_DEBT_COMMAND" type="id" />
    <item name="TOGGLE_PARENT_CATEGORY_SELECTION_ON_TAP" type="id" />
    <item name="PURGE_BACKUPS_COMMAND" type="id" />
    <item name="ROLLOVER_COMMAND" type="id" />
    <item name="ROLLOVER_TOTAL" type="id" />
    <item name="ROLLOVER_CATEGORIES" type="id" />
    <item name="ROLLOVER_EDIT" type="id" />
    <item name="ROLLOVER_CLEAR" type="id" />
    <item name="SAFE_MODE_COMMAND" type="id" />
    <item name="EDIT_ACCOUNT_COMMAND" type="id" />
    <item name="TOGGLE_SEALED_COMMAND" type="id" />
    <item name="RECONFIGURE_COMMAND" type="id" />
    <item name="ENCRYPT_CANCEL_COMMAND" type="id" />
    <item name="ENCRYPT_LEARN_MORE_COMMAND" type="id" />
    <item name="SHOW_ALL_COMMAND" type="id" />
    <item name="SYNC_COMMAND_EXPORT" type="id" />
    <item name="SYNC_COMMAND_IMPORT" type="id" />
    <item name="NOTIFICATION_SETTINGS_COMMAND" type="id" />
    <item name="DELETE_FILES_COMMAND" type="id" />
    <item name="DELETE_BANK_COMMAND_DO" type="id" />
    <item name="TYPE_FILTER_COMMAND" type="id" />
    <item name="FILTER_EXPENSE_COMMAND" type="id" />
    <item name="FILTER_INCOME_COMMAND" type="id" />
    <item name="AGGREGATE_COMMAND" type="id" />
    <item name="CATEGORY_COMMAND" type="id" />
    <item name="DELETE_CALENDAR_COMMAND" type="id" />
    <item name="UNLINK_TRANSFER_COMMAND" type="id" />
    <item name="TRANSFORM_TO_TRANSFER_COMMAND" type="id" />
    <item name="WEB_UI_COMMAND" type="id" />
    <item name="FULL_SCREEN_COMMAND" type="id" />
    <item name="ARCHIVE_COMMAND" type="id" />
    <item name="UNARCHIVE_COMMAND" type="id" />
    <item name="SORT_PAYEE_NAME_COMMAND" type="id" />
    <item name="GROUPING_BUDGETS_GROUPING_COMMAND" type="id" />
    <item name="GROUPING_BUDGETS_ACCOUNT_COMMAND" type="id" />
    <item name="SORT_DEBT_SUM_COMMAND" type="id" />
    <item name="DYNAMIC_EXCHANGE_RATE_COMMAND" type="id" />
    <item name="SELECT_SOURCE_MENU_ID" type="id" />
    <item name="FRANKFURTER_ID" type="id" />
    <item name="COIN_API_ID" type="id" />
    <item name="OPENEXCHANGERATES_ID" type="id" />
    <item name="CLEAR_FILTER_COMMAND" type="id" />
    <item name="BALANCE_SHEET_COMMAND" type="id" />
    <item name="DEFAULT_COMMAND" type="id" />
    <item name="SORT_DIRECTION_MENU" type="id" />
    <item name="SORT_ASCENDING_COMMAND" type="id" />
    <item name="SORT_DESCENDING_COMMAND" type="id" />
    <item name="BATCH_DOWNLOAD_COMMAND" type="id" />
    <item name="IMPORT_COMMAND_DO" type="id" />
    <item name="MANAGE_ACCOUNT_TYPES_COMMAND" type="id" />
    <item name="CLEANUP_COMMAND" type="id" />
    <item name="CLEANUP_COMMAND_DO" type="id" />
    <item name="TUNE_COMMAND" type="id" />
    <item name="IMPORT_TRADES_COMMAND" type="id" />
    <item name="CURRENCIES_COMMAND" type="id" />
</resources>
