...
    <string name="menu_create_method">New payment method</string>
    <string name="menu_create_party">New party</string>
    <string name="menu_create_split">New split</string>
    <string name="menu_create_split_part_category">New category split part</string>
    <string name="menu_create_split_part_transfer">New transfer split part</string>
    <string name="menu_create_sub_cat">New sub category</string>
    <string name="menu_create_template">New template</string>
    <string name="menu_create_template_from_transaction">Save as template</string>
    <string name="menu_create_template_for_transaction">New transaction template</string>
    <string name="menu_create_template_for_transfer">New transfer template</string>
    <string name="menu_create_transaction">New Transaction</string>
    <string name="menu_create_transfer">New Transfer</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_account">Delete account</string>
    <string name="menu_distribution">Distribution</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_account">Edit Account</string>
    <string name="menu_edit_cat">Edit category</string>
    <string name="menu_edit_method">Edit payment method</string>
...
    <string name="menu_save">Save</string>
    <string name="menu_save_and_new">Save and new</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Tell a friend</string>
    <string name="menu_set_sort_key">Set sort key</string>
    <string name="menu_split_transaction">Transform to split</string>
    <string name="method">Method</string>
    <string name="new_version">New version</string>
    <string name="no_accounts">No Accounts!</string>
    <string name="no_amount_given">You did not enter any amount.</string>
    <string name="no_app_handling_email_available">No app handling email available.</string>
    <string name="no_app_handling_ftp_available">No app handling ftp available. Install <i>Send With FTP</i>?</string>
...
    <string name="select_category">Select category</string>
    <string name="menu_select_category">Select this category</string>
    <string name="menu_select_folder">Select this folder</string>
    <string name="share_scheme_not_supported">Scheme %1$s not supported</string>
    <string name="share_sending">Send export file</string>
    <string name="split_parts_heading">Split parts</string>
    <string name="split_transaction">Split transaction</string>
    <string name="status">Status</string>
    <string name="status_cleared">cleared</string>
    <string name="status_reconciled">reconciled</string>
    <string name="status_uncreconciled">unreconciled</string>
    <string name="subcategory">Subcategory</string>
    <string name="sum_expenses">Expenses</string>
...
