...
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/padding_dialog_side"
    android:paddingTop="10dp">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
